somewhat minimal slick is working
